진근이의 취향

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=Smate
 
 
-gemini.api.key=
+gemini.api.key=AIzaSyDXLO5y4odcmy0oDaSCCgxN522CglT22as
 
-gemini.api.url=
+gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-flash-lite-latest:generateContent
