--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,29 @@ gemini.api.url=https://generativelanguage.googleapis.com/v1beta/models/gemini-fl
 
 
 
+# ======================================================
+# FreeDB MySQL Connection Settings
+# ======================================================
+# JDBC URL: sql.freedb.tech ??? 3306 ??? ?? freedb_smate12 ??????? ??
+spring.datasource.url=jdbc:mysql://sql.freedb.tech:3306/freedb_smate12?serverTimezone=UTC&characterEncoding=UTF-8
 
+# Database User: ??? ??? ??
+spring.datasource.username=freedb_kim123
+
+# Database Password: ??? ????
+spring.datasource.password=eK8T%TKjYHTRj7n
+
+# MySQL Driver
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
+# ======================================================
+# JPA (Java Persistence API) Settings
+# ======================================================
+# DDL (Data Definition Language) ?? ?? ??
+# update: ?? ?? ? Entity? DB ???? ???? ??? ??? ??
+spring.jpa.hibernate.ddl-auto=update
+
+# ???? SQL ??? ??? ???? ?? (?? ? ?? ??)
+spring.jpa.show-sql=true
 
