--- a/build.gradle
+++ b/build.gradle
@@ -10,13 +10,7 @@ description = 'Demo project for Spring Boot'
 
 java {
 	toolchain {
-		languageVersion = JavaLanguageVersion.of(17)
-	}
-}
-
-configurations {
-	compileOnly {
-		extendsFrom annotationProcessor
+		languageVersion = JavaLanguageVersion.of(21)
 	}
 }
 
@@ -25,30 +19,28 @@ repositories {
 }
 
 dependencies {
+	// ✅ Spring MVC (API 서버용)
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+
+	// ✅ WebClient(비동기 API 호출) 쓰는 경우 유지
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
-	compileOnly 'org.projectlombok:lombok'
-	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
-	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
-	// 1. API 서버를 만들기 위한 필수 도구
-	implementation 'org.springframework.boot:spring-boot-starter-web'
 
-	// 2. 데이터베이스와 쉽게 통신하게 해주는 도구
+	// ✅ DB & JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-
-	// 3. 스프링이 MySQL과 대화할 수 있게 해주는 '통역기'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
-	// 4. 코드를 깔끔하게 줄여주는 마법 같은 도구
+	// ✅ 템플릿 엔진 (HTML 뷰 필요 없으면 삭제 가능)
+	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+
+	// ✅ Lombok (중복 제거, 필요한 위치에만 선언)
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 
-	// 기타 이미 있던 의존성들...
+	// ✅ 테스트
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-
+	testImplementation 'io.projectreactor:reactor-test'
 }
 
 tasks.named('test') {
