--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+# (JSP/Servlet ??) ???? ??
+# 1. ?? 1?? ?? ?? (?? 1MB -> 20MB?)
+spring.servlet.multipart.max-file-size=20MB
+# 2. ?? ??(?? ??)? ?? ?? (?? 10MB -> 50MB?)
+spring.servlet.multipart.max-request-size=50MB
